css/main.css
/* NOTE: See long set of notes & comments at bottom explaining Flexbox */

html {
	font-size: 16px;
}

body {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 1em;
}

.container {
	max-width: 1200px;
	/* margin: 0 auto; */
	width: 90%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
}

h1,
h2,
h3,
h4 {
	color: black;
	text-transform: uppercase;
	font-weight: 700;
}
h1 {
	font-size: 30px;
}
h2 {
    font-size: 24px;
}
h3 {
	font-size: 18px;
}
h4 {
	font-size: 12px;
}

p {
	font-size: 14px;
	line-height: 21px;
    padding: 0 30px;
}

/*The widths are in a percentage!*/
header {
	/* border-bottom: 3px solid #77a466; */
	/* margin: 0 auto; */
	display: flex;
	justify-content: space-between;
	align-items: center;
	flex-flow: row wrap;
	text-align: center;
}

header h1 {
	/*margin: 0; */
	padding: 38px 0;
	justify-content: flex-start;
	align-items: center;
	width: 100%;
	border-bottom: 3px solid #77a466;
}
header h1 span {
	color: #77a466;
}

header nav {
	padding: 46px 0;
	width: 100%;
}
header nav ul {
	/* margin: 0; */
	padding: 0;
	list-style-type: none;
	display: flex;
	justify-content: flex-end;
	align-items: space-between;
	/* flex-wrap: wrap; -- REMOVE per Skillcrush for nav bar to display properly */
	text-align: center;
	line-height: 2.5em;
}
header nav ul li {
	text-transform: uppercase;
	font-weight: 700;
	font-size: 14px;
	padding: 0 10px;
	/* width: 100%; -- need to remove 100% width from both the base (mobile) style
	AND the desktop media query because if the width is in the base style then it
	will be applied to all screens! /*
	/* display: inline; -- REMOVE per Skillcrush; not needed because of Flexbox */
}
header nav ul li a{
	text-decoration: none;
	color:#77a466;
}

/*The widths are in a percentage!*/
.top-section,
.bottom-section {
	/* margin: 0 auto; */
	display: flex;
	justify-content: center;
	align-items: flex-start;
	width: 100%;
	flex-flow: row wrap; /* made most of the things work!! Not sure how! */
}

.main-image {
	height: auto;
}
.main-image img {
	width: 100%;
	border-bottom: 3px solid #77a466;
}

.main-title {
	height: auto;
}
.main-title h3 {
	text-align: left;
	padding: 5px 0;
	color: #77a466;
}
.main-title p {
	padding: 0;
	font-size: 16px;
	line-height: 25px;
}

.section-one,
.section-two,
.section-three {
	width: 100%;
	height: auto;
	border-top: 1px solid #eee;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
	text-align: center;
}

.section-one h4 {
	padding: 10px 0;
}

.section-two h4,
.section-three h4 {
	padding: 10px 30px;
}


.menu {
	list-style: none;
	padding: 0;
}
.menu li {
	padding: 10px 0;
	color:#77a466;
}

.reviews {
	color: #333;
	font-size: 16px;
	line-height: 21px;
}

.address {
	font-size: 16px;
	line-height: 24px;
}

/*The widths are in a percentage!*/
footer {
	border-top: 3px solid #eee;
	/* margin: 0 auto;
	text-align: center; */
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
}
footer span {
	font-family: 'Galada', cursive;
	text-transform: lowercase;
	color: #77a466;
	font-size: 14px;
}

@media (min-width: 768px) {
	.bottom-section {
		display: flex;
		justify-content: space-between;
		align-items: center;
		border-top: 1px solid #c0c0c0;
	}

	.section-one,
	.section-two,
	.section-three {
		display: flex;
		text-align: center;
		border-top: none;
		flex-basis: 30%;
	}

	.section-two {
 	border-left: 1px solid #eee;
 	border-right: 1px solid #eee;
}

} /* close media */

@media only screen and (min-width: 1200px) {
    header {
			display: flex;
      justify-content: space-between;
    } /* close header */

    header h1 {
        width: 30%;
        border-bottom: none;
        text-align: left;
    } /* close h1 */

    header nav {
			display: flex;
			justify-content: space-between;
			width: 45%;
    } /* close nav */

    header nav ul {
        display: flex;
        justify-content: space-between;
    } /* close nav ul */

		header nav ul li {
		/* no width needed per Sharon @ Skillcrush b/c if there is a width here
		the links can't sit together on the same line */
		} /* close nav ul li */
} /* close media */

/*

====== THE NAV BAR QUESTIONS ======

I had a 100% width in the mobile and desktop versions -- that can't be there

In the base (mobile) style, I told the nav bar to wrap -- that can't be there
either!!

====== CONVERT A SITE FROM STATIC TO RESPONSIVE ======

1. Remove all floats, clears, fixed heights (Flexbox fixes this automatically)

2. Center all your content
Center the following... (add Flexbox styles to these two in step 5)

body
container
header
top-section
bottom-section
footer

3. In the html tag, set the font-size property to 16px
** Remember, 16px is the best practice size!

4. In the body tag, set the font-size property to 1em

5. Add your Flexbox styles for mobile
** Remember...

display: flex;
justify-content: [property] (horizontal axis -- default) << main axis
align-items: [property] (vertical axis -- default) << cross-axis
flex-flow: [property]

**Also remember...

Mobile screens are UNDER 768px
Tablet screens are 768px and 1199px
Desktop is 1200px and higher

====== MAJOR NOTES ON CSS AND FLEXBOX ======

Since at the moment, I'm struggling with CSS, some notes...

Only make things display: flex that have elements inside them that you want to
mess with. So containers need to be flex items, navs need to be flex items.
Things like h1s, h2s, etc don't because they don't have things inside them
that need to be positioned.

Sometimes you have to set the width of some things to be 100%, like headers,
h1s, and footers. Also set the main flex container to 100%.

Think of Flexbox as a set of divs that are empty squares...sometimes you have
to use things like text-align to mess with the content inside the divs. Flexbox
pretty much divides your screen into "boxes" and allows you to position those
boxes how you want...but if there are elements inside the boxes that you need or
want positioned (like the nav bar being centered with text-align, or the bottom
sections of the site reviews/menu/contact being centered with text-align) you
still have to write that CSS yourself.

Bottom line: Flexbox does a lot for you, but it can't do everything for you!!

Keep learning!!

